--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+HelloWorldFunction/terraform.tfstate.backup
+.idea/vcs.xml
+HelloWorldFunction/.terraform.lock.hcl
+HelloWorldFunction/.terraform/providers/registry.terraform.io/hashicorp/aws/5.76.0/windows_amd64/LICENSE.txt
+HelloWorldFunction/.terraform/providers/registry.terraform.io/hashicorp/aws/5.76.0/windows_amd64/terraform-provider-aws_v5.76.0_x5.exe
+HelloWorldFunction/terraform.tfstate
