--- a/HelloWorldFunction/docker-compose.yml
+++ b/HelloWorldFunction/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: localstack/localstack:latest
     container_name: local-aws-services
     environment:
+      - AWS_DEFAULT_REGION=sa-east-1
       - DEBUG=${DEBUG:-0}
     ports:
       - '4566-4597:4566-4597'
